openshift/spring-boot-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-redis-app
  labels:
    app: spring-boot-redis-app
    env: sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-redis-app
  template:
    metadata:
      labels:
        app: spring-boot-redis-app
    spec:
      containers:
        - name: spring-boot-redis-app
          image: image-registry.openshift-image-registry.svc:5000/sit-namespace/spring-boot-redis-app:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
