openshift/app-service-route.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-redis-app
  labels:
    app: spring-boot-redis-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: spring-boot-redis-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-boot-redis-app
spec:
  to:
    kind: Service
    name: spring-boot-redis-app
  port:
    targetPort: 8080
  tls:
    termination: edge
